Fixed tables where items were getting squished

--- a/src/app/view-ticket/view-ticket.component.css
+++ b/src/app/view-ticket/view-ticket.component.css
@@ -5,4 +5,27 @@ table {
   .content-color{
     color: #673ab7;
   }
-  
+
+  .content-color{
+    color: #673ab7;
+    padding:2px
+  }
+  .mat-column-id {
+    flex: 0 0 5%;
+}
+.mat-column-amount {
+    flex: 0 0 5%;
+}
+
+.mat-column-description {
+  flex: 0 0 25%;
+}
+
+
+.mat-column-author {
+  flex: 0 0 10%;
+}
+
+.mat-column-resolver {
+  flex: 0 0 12%;
+}
